--- a/application/app.json
+++ b/application/app.json
@@ -26,7 +26,9 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#010101"
       },
-      "package": "com.w3arthur.MenoraFlix"
+      "package": "com.w3arthur.MenoraFlix",
+      "versionCode": 1
+
     },
     "web": {
       "favicon": "./assets/favicon.png"
